--- a/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
@@ -36,7 +36,7 @@ To provision a new Dedicated cloud router, you must first create a new graph in 
 <img
   className="screenshot"
   alt="Graphs tab in GraphOS Studio"
-  src="../../img/cloud-dedicated/create-new-graph.png"
+  src="../../img/cloud-dedicated/create-new-graph.jpg"
 />
 
 ## Step 2. Connect APIs
