--- a/src/content/graphos/delivery/contract-setup.mdx
+++ b/src/content/graphos/delivery/contract-setup.mdx
@@ -245,7 +245,7 @@ Contract checks do the following for each of a source variant's associated contr
 1. Use the source variant's proposed supergraph schema (validated by build checks) to generate and validate an updated contract schema.
 2. Run operations checks against the updated contract schema.
 
-On your graph's **Checks** page in Studio, you can see the status of contract checks by clicking the Satellite icon:
+On your graph's **Checks** page in Studio, you can see the status of contract checks by clicking the Satellite icon in any set of checks:
 
 <img
   className="screenshot"
@@ -254,9 +254,7 @@ On your graph's **Checks** page in Studio, you can see the status of contract ch
   width="600"
 />
 
-Click a particular check to view more details.
-
-On a check's details page, the contact check appears as **Downstream** in the **Task** column.
+Open a particular check to view more details. On the check's details page, the contact check appears as **Downstream** in the **Task** column.
 
 <img
   className="screenshot"
