--- a/src/content/graphos/metrics/operation-signatures.mdx
+++ b/src/content/graphos/metrics/operation-signatures.mdx
@@ -13,7 +13,7 @@ When you're viewing your graph's [operation metrics](./operations), GraphOS Stud
   width="300"
 />
 
-Though each operation in the above example is named `MyQuery`, GraphOS treats them as different operations because they request different fields.
+Though each operation in the above example is named `ExampleQuery`, GraphOS treats them as different operations because they request different fields.
 
 To help GraphOS identify functionally identical operations, your router generates an _operation signature_ for each operation it reports to Studio. This signature is a normalized representation for an operation with deterministic field order, whitespace, and values for in-line argument values.
 
