--- a/src/content/graphos/org/audit-log.mdx
+++ b/src/content/graphos/org/audit-log.mdx
@@ -11,7 +11,7 @@ Organizations with a GraphOS Enterprise plan can export and download an audit lo
 The interface for requesting an export of auditable events is available under the **Audit** tab of your organization's homepage in GraphOS Studio:
 
 <img
-  src="https://user-images.githubusercontent.com/5922187/127679934-e862077a-0ce0-4e3a-89db-ad9e621111ff.png"
+  src="../img/audit-logs.jpg"
   className="screenshot"
   alt="GraphOS Studio audit log"
 />
