--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -275,8 +275,8 @@ Because we've already configured the Rover CLI, we can now use its `subgraph pub
 In [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content), click the graph you created back in the first step. Because we haven't published any schemas to it yet, the following dialog appears:
 
 <img
+  className="screenshot"
   src="../../img/register-schema-dialog.jpg"
-  class="screenshot"
   alt="Schema registration options"
   width="600"
 />
