--- a/src/content/shared/create-self-hosted-supergraph.mdx
+++ b/src/content/shared/create-self-hosted-supergraph.mdx
@@ -12,6 +12,7 @@
   src="../graphos/img/register-schema-dialog.jpg"
   alt="Schema registration options"
   width="600"
+  className="screenshot"
 />
 
 6. Leave the **Supergraph Pipeline Track** dropdown set to its default value.
