--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -184,5 +184,6 @@ type User {
 
 ## Next steps
 
-To learn how to run your first schema check, integrate checks into your CI pipeline, and customize checks behavior, refer to [Run schema checks](./check-configurations).
-You can also [connect schema checks to GitHub](./github-integration) to add links to check results on the pull requests that initiate them. See the [Checks reference](./checks-reference) for the types of schema changes that checks detect.
+To learn how to run your first schema check, integrate checks into your CI pipeline refer to [Run Schema Checks](./run-checks).
+For a guide on configuring and customizing checks, see [Check Configurations](./check-configurations).
+You can also [connect schema checks to GitHub](./github-integration) to add links to check results on the pull requests that initiate them. See the [Checks Reference](./checks-reference) for the types of schema changes that checks detect.
