--- a/src/content/graphos/delivery/checks-reference.mdx
+++ b/src/content/graphos/delivery/checks-reference.mdx
@@ -4,7 +4,7 @@ subtitle: Reference for types of schema changes that checks can detect
 description: GraphOS Schema checks reference for schema changes in your GraphQL schema.
 ---
 
-This reference describes the operations checks statuses you may see in GraphOS Studio and the schema change types reported by [the Rover CLI `subgraph check` response](./check-configurations#the-check-response).
+This reference describes the operations checks statuses you may see in GraphOS Studio and the schema change types reported by [the Rover CLI `subgraph check` response](./run-checks#the-check-response).
 
 ## Operations check statuses
 
@@ -99,7 +99,7 @@ If you use the GraphOS Router to [report operation metrics](../metrics/sending-o
 
 <Note>
 
-You can use [ignored conditions settings](./check-configurations#ignored-conditions-settings) to ignore all potentially breaking changes when detected on a variant without traffic.
+You can use [ignored conditions settings](./run-checks#ignored-conditions-settings) to ignore all potentially breaking changes when detected on a variant without traffic.
 
 </Note>
 
