--- a/src/content/graphos/delivery/run-checks.mdx
+++ b/src/content/graphos/delivery/run-checks.mdx
@@ -127,7 +127,7 @@ You can rerun checks from GraphOS Studio. Select the check and click **Rerun che
 
 The new checks run incorporates any changes made to excluded or included clients, checked variants, and any operations marked as safe or ignored.
 
-The new run uses the current [check configuration options](#configuring-checks), regardless of the configuration at the time of the original run. Similarly, the new run's time window is based on the current time, not when the original check ran.
+The new run uses the current [check configuration options](./check-configurations), regardless of the configuration at the time of the original run. Similarly, the new run's time window is based on the current time, not when the original check ran.
 
 <Note>
 
