--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -67,6 +67,7 @@ and other GraphQL best practices.
 <tr>
 <td>
 
+
 #### Proposals checks
 
 (Enterprise only)
@@ -166,5 +167,7 @@ type User {
 
 ## Next steps
 
-To learn how to run your first schema check, integrate checks into your CI pipeline, and customize checks behavior, refer to [Run schema checks](./check-configurations).
-You can also [connect schema checks to GitHub](./github-integration) to add links to check results on the pull requests that initiate them. See the [Checks reference](./checks-reference) for the types of schema changes that checks detect.
+To learn how to run your first schema check and integrate checks into your CI pipeline, refer to [Run Schema Checks](./run-checks).
+You can also [connect schema checks to GitHub](./github-integration) to add links to check results on the pull requests that initiate them.
+For a guide on configuring checks, see [Check Configurations](./check-configurations).
+See the [Checks Reference](./checks-reference) for the types of schema changes that checks detect.
