Add custom check to overview

--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -67,6 +67,17 @@ and other GraphQL best practices.
 <tr>
 <td>
 
+#### Custom checks
+
+</td>
+<td>
+Run custom validation, for example, to enforce custom linting rules or confirm
+schema changes belong to a particular git branch.
+</td>
+</tr>
+<tr>
+<td>
+
 
 #### Proposals checks
 
@@ -96,7 +107,7 @@ proposed schema changes break any downstream [contract](./contracts) variants.
 </tbody>
 </table>
 
-This article provides further details on build and operations checks.
+This article provides further details on build, operations, and custom checks.
 
 - For details on linter checks, see [Schema linting](./schema-linter/).
 - For details on proposals checks, see [Schema proposals check configuration](./schema-proposals/configuration#configure-schema-checks).
@@ -125,6 +136,19 @@ If a build check succeeds, GraphOS then validates schema changes with _operation
   className="screenshot"
   src="../img/schema-checks/failed-operations-check.jpg"
   alt="Failed operations check results in Studio"
+  width="700"
+/>
+
+### Custom checks
+
+Custom checks let you run custom validations using webhooks.
+Once you [configure custom checks](./custom-checks), GraphOS sends schema change information to a specified webhook on each schema check run.
+Your endpoint can then respond with any potential issues, which are displayed in GraphOS Studio along with other check result details.
+
+<img
+  className="screenshot"
+  src="../img/schema-checks/custom-check-result.jpg"
+  alt="To-do"
   width="700"
 />
 
@@ -169,5 +193,5 @@ type User {
 
 To learn how to run your first schema check and integrate checks into your CI pipeline, refer to [Run Schema Checks](./run-checks).
 You can also [connect schema checks to GitHub](./github-integration) to add links to check results on the pull requests that initiate them.
-For a guide on configuring checks, see [Check Configurations](./check-configurations).
+For a guide on configuring checks, including enabling [custom checks](./custom-checks), see [Check Configurations](./check-configurations).
 See the [Checks Reference](./checks-reference) for the types of schema changes that checks detect.
