--- a/src/content/graphos/delivery/check-configurations.mdx
+++ b/src/content/graphos/delivery/check-configurations.mdx
@@ -40,6 +40,7 @@ You configure operations, linter, and proposals checks.
 - **Excluded Operations**: Exclude specific named operations.
 - **Ignored Conditions**: Ignore certain kinds of schema changes. [Learn more.](./run-checks/#ignored-conditions-settings)
 - **Custom Checks**: Enable custom checks. [Learn more.](./custom-checks)
+  <<<<<<< HEAD
 
 #### Linter check configurations
 
@@ -50,6 +51,9 @@ See [Linter configuration](./schema-linter/#linter-configuration) for details.
 
 You can configure schema checks to include a Proposals task that verifies whether schema changes have matching and approved schema proposals.
 (Off by default.) [Learn more.](./schema-proposals/configuration#configure-schema-checks)
+=======
+
+> > > > > > > 8da19b30 (Vale)
 
 ## Using the Rover CLI
 
