--- a/src/content/graphos/delivery/check-configurations.mdx
+++ b/src/content/graphos/delivery/check-configurations.mdx
@@ -11,6 +11,7 @@ You can configure schema checks behavior to suit your use case using either Grap
 - Check schema changes against multiple graph variants.
 - Ignore changes to default values.
 - Ignore potentially breaking changes when an operations check runs against zero operations.
+- Enable custom checks.
 
 ## Using GraphOS Studio (recommended)
 
@@ -31,6 +32,7 @@ In [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content), you
 - **Excluded Clients**: Exclude all operations executed by particular clients, such as clients used exclusively for development and testing.
 - **Excluded Operations**: Exclude specific named operations.
 - **Ignored Conditions**: Ignore certain kinds of schema changes. [Learn more.](./run-checks/#ignored-conditions-settings)
+- **Custom Checks**: Enable custom checks. [Learn more.](./custom-checks)
 
 ## Using the Rover CLI
 
